[workspace]
members = ["bigratware", "bigratware-toolchain"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
rsa = "0.9.6"
sha2 = "0.10.8"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
