[package]
name = "bigratware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
dirs-next = "2.0.0"
