[package]
name = "bigratware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decryptor = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true, features = ["sha2"] }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
dirs-next = "2.0.0"

[target.'cfg(windows)'.dependencies]
indoc = "2.0.4"
native-windows-derive = "1.0.5"
native-windows-gui = { version = "1.0.13", features = ["notice", "progress-bar"] }
mslnk = "0.1.8"
